# fleet-manager

./: .gitignore  README.md  docker-compose.yml  main.py
.github/workflows/: docker-build.yaml
backend/: Dockerfile  main.py  pyproject.toml
backend/api/: deps.py  router.py
backend/api/routes/: action_endpoints.py  caretaker_endpoints.py  caretaker_panel_endpoints.py  equipment_endpoints.py  is_performed_endpoints.py  login_endpoints.py  make_endpoints.py  reservation_endpoints.py  set_of_equipment_endpoints.py  vehicle_endpoints.py  vehmodel_endpoints.py  version_endpoints.py  worker_endpoints.py
backend/core/: security.py
backend/crud/: action_crud.py  caretaker_crud.py  equipment_crud.py  is_performed_crud.py  make_crud.py  reservation_crud.py  set_of_equipment_crud.py  vehicle_crud.py  vehmodel_crud.py  version_crud.py  worker_crud.py
backend/database/: database.py
backend/models/: PRZYKLAD.py  action_model.py  associations.py  caretaker_model.py  equipment_model.py  is_performed_model.py  make_model.py  reservation_model.py  set_of_equipment_model.py  vehicle_model.py  vehmodel_model.py  version_model.py  worker_model.py
frontend/: .dockerignore  .gitignore  Dockerfile  biome.json  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Dashboard.tsx  DataTable.tsx  OnboardingTour.tsx
frontend/src/lib/: api.ts  calendar.ts  forms.ts
frontend/src/types/: action_types.ts  caretaker_panel_types.ts  caretaker_types.ts  equipment_types.ts  index.ts  is_performed_types.ts  make_types.ts  (+8 more)
(+38 files in other folders)
