[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "pydantic[email]>=2.13.3",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-orm>=1.2.10",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "psycopg2-binary==2.9.9",
]
